fix: change overflow scroll to auto
fixes #592

--- a/vega-embed.scss
+++ b/vega-embed.scss
@@ -118,7 +118,7 @@
 
 .vega-embed-wrapper {
   max-width: 100%;
-  overflow: scroll;
+  overflow: auto;
   padding-right: 14px;
 }
 
